src/app.css
body {
	margin: 0;
}

main {
	padding: 0 30em 0 0.7em;
	flex: 1;
}

@media (max-width: 1024px) {
	main {
		padding: 0 0.7em;
	}
}

h1,
h2,
h3 {
	margin: 0;
	color: #0b0b0b;
}

h1,
h2 {
	font-family: 'Inknut Antiqua';
	font-weight: 300;
	word-break: keep-all;
	white-space: normal;
	hyphens: manual;
	cursor: default;
	user-select: none;
	font-size: 3.2rem;
	line-height: 1.2;
	letter-spacing: -0.1em;
}

/* h1 {
	font-size: 8.5rem;
	line-height: 1;
	letter-spacing: -0.15em;
}

h2 {
	font-size: 3.2rem;
	line-height: 1.2;
	letter-spacing: -0.1em;
} */

h3 {
	font-style: italic;
	font-family: 'Inter';
	font-weight: 400;
	font-size: 1.4rem;
	line-height: 1;
	letter-spacing: -0.02em;
}

p,
li {
	font-family: 'Inter';
	font-weight: 300;
	font-size: 1.4rem;
	line-height: 1.3;
	letter-spacing: -0.02em;
	margin: 0;
	padding: 0;
	color: #0b0b0b;
	word-break: keep-all;
	white-space: normal;
	hyphens: manual;
}

